// Vitest Snapshot v1

exports[`document > force overwrite 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`document > name options 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`document > not found 1`] = `
"
 ERROR  Document \\"not-found\\" not found.

"
`;

exports[`document > overwrite files 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 1 file! (1 skipped)

     ✔ tmp/nest/dump.txt
     ⚠ tmp/generate.txt (skipped)
"
`;

exports[`document > prompt 1`] = `
"ℹ Output destination directory: \\".\\"

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`document > prompt 2`] = `
"a
tmp/nest/dump.txt
dump
dump.txt
.txt
tmp/nest
dump.txt

../../snapshots/src"
`;

exports[`dry run 1`] = `
"ℹ Output destination directory: \\".\\"

───┬────────────────────────────────────────────────────────
 ✔ │ File: tmp/nest/dump.txt
───┼────────────────────────────────────────────────────────
 1 │ a
 2 │ tmp/nest/dump.txt
 3 │ dump
 4 │ dump.txt
 5 │ .txt
 6 │ tmp/nest
 7 │ dump.txt
 8 │ 
 9 │ ../../snapshots/src

───┬────────────────────────────────────────────────────────
 ✔ │ File: tmp/generate.txt
───┼────────────────────────────────────────────────────────
 1 │ foo

🐶 Generated 2 files!

     ✔ tmp/nest/dump.txt
     ✔ tmp/generate.txt
"
`;

exports[`has magic and question 1`] = `
"ℹ Output destination directory: \\"tmp/root\\"

🐶 Generated 1 file!

     ✔ tmp/root/b.txt
"
`;
